--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -78,8 +78,14 @@
 {% endblock main %}
 
 {% block toc %}
+  {% if post.toc %}
                 <div class="widget widget-content">
-                    <h3 class="widget-title">文章目录</h3>
-                    {{ post.toc|safe }}
+                  <h3 class="widget-title">文章目录</h3>
+                  <div class="toc">
+                    <ul>                     
+                      {{ post.toc|safe }}
+                    </ul>
+                  </div>
                 </div>
+  {% endif %}
 {% endblock toc %}
