--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -23,7 +23,7 @@
                     </header>
                     <div class="entry-content clearfix">
 
-                        <p>{{ post.excerpt }}</p>
+                        <p>{{ post.body|truncatechars:54 }}</p>
 
                         <div class="read-more cl-effect-14">
 
