06/27/20:02 Added sidebar by customize template tags,including recent_posts, categories, tags and archives.

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 
 {% load static %}
+{% load blog_extras %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -111,6 +112,14 @@
                 {% block toc %}
                 {% endblock toc %}
 
+                {% show_recent_posts %}
+                {% show_archives %}
+                {% show_categories %}
+                {% show_tags %}
+                
+                <div class="rss">
+                  <a href=""><span class="ion-social-rss-outline"></span> RSS 订阅</a>
+                </div>
             </aside>
         </div>
     </div>
