--- a/templates/blog/inclusions/_archives.html
+++ b/templates/blog/inclusions/_archives.html
@@ -2,9 +2,11 @@
   <h3 class="widget-title">归档</h3>
   <ul>
     {% for date in date_list %}
-      <li>
-        <a href="#">{{ date.year }} 年 {{ date.month }} 月</a>
-      </li>
+    <li>
+      <a href="{% url 'blog:archive' date.year date.month %}">
+        {{ date.year }} 年 {{ date.month }} 月
+      </a>
+    </li>
     {% empty %}
       暂无归档！
     {% endfor %}
