--- a/templates/blog/inclusions/_categories.html
+++ b/templates/blog/inclusions/_categories.html
@@ -2,9 +2,9 @@
   <h3 class="widget-title">分类</h3>
   <ul>
     {% for category in category_list %}
-      <li>
-        <a href="#">{{ category.name }} <span class="post-count">(13)</span></a>
-      </li>
+    <li>
+      <a href="{% url 'blog:category' category.pk %}">{{ category.name }}</a> 
+    </li>
     {% empty %}
       暂无分类！
     {% endfor %}
