06/29/12:57 Added comments to submit name, email, URL and text.

--- a/templates/base.html
+++ b/templates/base.html
@@ -94,9 +94,19 @@
             </div><!-- col-md-8 -->
         </div>
     </header>
+    {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+            <button type="button" class="close" data-dissmiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message }}
+        </div>
+        {% endfor %}
+    {% endif %}
 </div>
 <div class="copyrights">Collect from <a href="http://www.cssmoban.com/">网页模板</a></div>
-<div class="copyrights">Modified by <a href="http://zmrenwu.com/">追梦人物的博客</a></div>
+<!div class="copyrights">Modified by <a href="http://baidu.com/">test</a><!/div>
 
 <div class="content-body">
     <div class="container">
@@ -128,10 +138,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p class="copyright">&copy 2017 - 采集自<a href="http://www.cssmoban.com/"
-                                                        target="_blank" title="模板之家">模板之家</a>
-                    - 由<a href="http://zmrenwu.com/" title="网页模板" target="_blank">追梦人物的博客</a>修改
-                </p>
+                <p class="copyright">&copy 2020 TEXT testing by localhost </p>
             </div>
         </div>
     </div>
