--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -3,32 +3,32 @@
 
 
 {% block main %}
-    <article class="post post-{{ post.pk }}">
-        <header class="entry-header">
-            <h1 class="entry-title">{{ post.title }}</h1>
-            <div class="entry-meta">
-                <span class="post-category"><a href="#">{{ post.category.name }}</a></span>
-                <span class="post-date"><a href="#"><time class="entry-date"
+  <article class="post post-{{ post.pk }}">
+      <header class="entry-header">
+          <h1 class="entry-title">{{ post.title }}</h1>
+          <div class="entry-meta">
+              <span class="post-category"><a href="#">{{ post.category.name }}</a></span>
+              <span class="post-date"><a href="#"><time class="entry-date"
                                                                       datetime="{{ post.created_time }}">{{ post.created_time }}</time></a></span>
-                <span class="post-author"><a href="#">{{ post.author }}</a></span>
-                <span class="comments-link"><a href="#">4 评论</a></span>
-                <span class="views-count"><a href="#">588 阅读</a></span>
-            </div>
-        </header>
-        <div class="entry-content clearfix">
-            {{ post.body|safe }}
+              <span class="post-author"><a href="#">{{ post.author }}</a></span>
+              <span class="comments-link"><a href="#comment-area">{{ post.comment_set.count }} 评论</a></span>
+              <span class="views-count"><a href="#">588 阅读</a></span>
+          </div>
+      </header>
+      <div class="entry-content clearfix">
+          {{ post.body|safe }}
+      </div>
+  </article>
+
+      <section class="comment-area" id="comment-area">
+        <hr>
+        <h3>发表评论</h3>                   
+        {% show_comment_form post %}
+
+        <div class="comment-list-panel">
+            {% show_comments post %}
         </div>
-    </article>
-            <section class="comment-area" id="comment-area">
-
-            <hr>
-            <h3>发表评论</h3>                   
-            {% show_comment_form post %}
-
-            <div class="comment-list-panel">
-                {% show_comments post %}
-            </div>
-            </section>
+      </section>
 {% endblock main %}
 
 {% block toc %}
