--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -17,7 +17,7 @@
                                                                       datetime="{{ post.create_time }}">2017年5月11日</time></a></span>
                             <span class="post-author"><a href="#">{{ post.author }}</a></span>
                             
-                            <span class="comments-link"><a href="#">4 评论</a></span>
+                            <span class="comments-link"><a href="{{ post.get_absolute_url }}#comment-area">{{ post.comment_set.count }} 评论</a></span>
                             <span class="views-count"><a href="#">588 阅读</a></span>
                         </div>
                     </header>
