--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -14,11 +14,11 @@
                             
                             <span class="post-category"><a href="#">{{ post.category.name }}</a></span>
                             <span class="post-date"><a href="#"><time class="entry-date"
-                                                                      datetime="{{ post.create_time }}">2017年5月11日</time></a></span>
+                                                                      datetime="{{ post.created_time }}">{{post.created_time}}</time></a></span>
                             <span class="post-author"><a href="#">{{ post.author }}</a></span>
                             
                             <span class="comments-link"><a href="{{ post.get_absolute_url }}#comment-area">{{ post.comment_set.count }} 评论</a></span>
-                            <span class="views-count"><a href="#">588 阅读</a></span>
+                            <span class="views-count"><a href="{{ post.get_absolute_url }}">{{ post.views }} 阅读</a></span>
                         </div>
                     </header>
                     <div class="entry-content clearfix">
